added the stop button Functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Text to Speech Demo</string>
     <string name="enter_text_to_speak">Enter Text to Speak:</string>
     <string name="speak">Speak</string>
+    <string name="stop">Stop</string>
 </resources>
